fixed side menu top margin to prevent it from being behind the navbar

--- a/src/app/components/months-menu/months-menu.component.scss
+++ b/src/app/components/months-menu/months-menu.component.scss
@@ -14,6 +14,7 @@ $fontFamily : 'nasalization';
   font-family: $fontFamily;
   z-index : 0;
   padding-top : 8vh;
+  margin-top: 52px;
 }
  
 ul {
